<resources>
    <string name="app_name">IAK_Project</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signUp">Sign Up</string>
    <string name="daftar">Daftar</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
</resources>